Fix footnote readability in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,10 @@
   p > code {
     background-color: var(--blueish-text);
   }
+
+  .littlefoot-footnote__wrapper {
+    background-color: var(--blueish-headers);
+  }
 }
 
 /***
